# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: run_lint.yml
brain_games/: brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: .Brain_games.py.swp  brain_calc.py  brain_prime.py
brain_games/scripts/for_engine/: .engine.py.swp  engine.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_gcd.py.save  brain_prime.py  brain_progression.py
