
[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tyranich <tyranich@mail.ru>"]
packages = [
  { include = "brain_games" },
]
 

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
asciinema = "^2.1.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"
brain-games = "brain_games.scripts.games.brain_games:main"
