[tool.poetry]
name = "hexlet-code"
version = "0.9.0"
description = "games for development"
authors = ["tyranich <tyranich@mail.ru>"]
repository = "https://github.com/tyranich/python-project-lvl1"
license = "MIT"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
asciinema = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.games.brain_even_run:main"
brain-calc = "brain_games.scripts.games.brain_calc_run:main"
brain-gcd = "brain_games.scripts.games.brain_gcd_run:main"
brain-progression = "brain_games.scripts.games.brain_progression_run:main"
brain-prime = "brain_games.scripts.games.brain_prime_run:main"
brain-games = "brain_games.scripts.games.brain_games_run:main"
