[tool.poetry]
name = "hexlet-code"
version = "0.9.0"
description = "games for development"
authors = ["tyranich <tyranich@mail.ru>"]
repository = "https://github.com/tyranich/python-project-lvl1"
license = "MIT"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
asciinema = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-games = "brain_games.scripts.brain_games:main"
